Add ability to run tests with nose; measure test coverage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ python:
 cache: pip
 install:
   - pip install pylint
+  - pip install coveralls
   - pip install .
 script:
   - pylint circuitry
+  - nosetests
