--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,12 @@ python:
   - "3.8"
 cache: pip
 install:
+  - pip install -r docs/requirements.txt
   - pip install pylint
   - pip install coveralls
   - pip install .
 script:
+  - cd docs && sphinx-apidoc -f -E --templatedir=_templates -o _source .. ../setup.py && make html && cd ..
   - pylint circuitry
   - nosetests
 after_success:
