--- a/.github/workflows/lint-test-cover-docs.yml
+++ b/.github/workflows/lint-test-cover-docs.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9']
+        python-version: ['3.7', '3.8', '3.9', '3.10']
     name: "Python ${{ matrix.python-version }}"
     steps:
       - uses: actions/checkout@v2
@@ -17,9 +17,9 @@ jobs:
           architecture: x64
       - name: Lint and test module.
         run: |
-          pip install -U pylint coverage nose .
+          pip install -U pylint pytest pytest-cov .
           python -m pylint circuitry # Check against linting rules.
-          python -m nose --cover-erase # Test using nose.
+          python -m pytest # Run tests.
       - name: Publish coverage results.
         run: |
           pip install -U pylint coveralls
